Bug 475927 - Colorize tool: missing canvas updates on Edit key strokes and Show coloring
Summary: Colorize tool: missing canvas updates on Edit key strokes and Show coloring
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Colorize (other bugs)
Version First Reported In: 5.2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-21 15:05 UTC by paleh
Modified: 2024-02-28 18:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description paleh 2023-10-21 15:05:29 UTC
Formally , this is 2 different bugs, but since they may be related I decided to report them together.

STEPS TO REPRODUCE
1. Select the Colorize tool. Click on a paint layer to add a colorize mask.
2. Draw a stroke on the mask
3. In the tool options, click on update, wait for it to finish.
4. Uncheck "Edit key strokes"
5. Check "Edit key strokes"  back <- error #1
6. Toggle "Show coloring" twice (in the layers docker)
7. Uncheck "Edit key strokes"
8. Uncheck "Show coloring"
9. Check "Show coloring" <- error #2

OBSERVED RESULT
Step 5 has no immediate effect. Toggling "Show coloring" twice makes the canvas re-enter the strokes editing mode.
Step 9 has no immediate effect. Toggling "Edit key strokes twice" makes the coloring reappear.

EXPECTED RESULT
Step 5 makes the canvas enter the stroke editing mode immediately.
Step 9 makes the coloring appear immediately.

SOFTWARE/OS VERSIONS
Linux: Ubuntu 22.04
Qt Version: 5.15.7
Appimage

ADDITIONAL INFORMATION
The bug was not present in 5.1.5. It appeared at some point between 5.2.0-prealpha git 6c2a270 (30/11/2022) and 5.2.0-beta1 (27/06/2023)
Comment 1 p.f.parzer@gmail.com 2024-01-13 15:51:53 UTC
This bug is still present in version 5.2.2 (appimage)
Comment 2 Dmitry Kazakov 2024-01-16 14:32:18 UTC
Git commit 1dbc7bd563cabf7691123ac407a0cc534552ca4d by Dmitry Kazakov.
Committed on 16/01/2024 at 15:32.
Pushed by dkazakov into branch 'master'.

Don't skip updates on colorize mask props change

When we change visibility of any colorize mask's plane, we should
issue an update to make sure the new state of the layer is visible

M  +0    -2    libs/image/commands/kis_node_property_list_command.cpp

https://invent.kde.org/graphics/krita/-/commit/1dbc7bd563cabf7691123ac407a0cc534552ca4d
Comment 3 Dmitry Kazakov 2024-02-28 18:10:14 UTC
Git commit eeffa12dddb1d373e6550ba7078565407bbae41a by Dmitry Kazakov.
Committed on 28/02/2024 at 12:54.
Pushed by dkazakov into branch 'kazakov/for-5.2'.

Don't skip updates on colorize mask props change

When we change visibility of any colorize mask's plane, we should
issue an update to make sure the new state of the layer is visible

M  +0    -2    libs/image/commands/kis_node_property_list_command.cpp

https://invent.kde.org/graphics/krita/-/commit/eeffa12dddb1d373e6550ba7078565407bbae41a