Don't skip updates on colorize mask props change

When we change visibility of any colorize mask's plane, we should
issue an update to make sure the new state of the layer is visible

BUG:475927